--- a/apps/cert-manager/overlays/prod/wildcard-certificate-prod.yml
+++ b/apps/cert-manager/overlays/prod/wildcard-certificate-prod.yml
@@ -10,6 +10,7 @@ spec:
     name: letsencrypt-prod
   dnsNames:
   - "*.nerdylyonsden.io"
+  - "*.home.nerdylyonsden.io"
 
   secretTemplate:
     annotations:
