--- a/apps/heimdall/overlays/prod/service.yml
+++ b/apps/heimdall/overlays/prod/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: heimdall-prod-service
+  name: heimdall-prod
   namespace: heimdall-prod
 spec:
   selector:
