--- a/helm-charts/slurpit/values.yaml
+++ b/helm-charts/slurpit/values.yaml
@@ -4,7 +4,7 @@ global:
 
   persistence:
     enabled: true
-    storageClass: "rook-ceph-fs"
+    storageClass: "rook-cephfs-delete"
     accessMode: ReadWriteMany
     size: 2Gi
     annotations: {}
