--- a/apps/rook-ceph/overlays/lab/ceph-storageclass-retain.yml
+++ b/apps/rook-ceph/overlays/lab/ceph-storageclass-retain.yml
@@ -13,7 +13,7 @@ parameters:
 
   # Ceph pool into which the volume shall be created
   # Required for provisionVolume: "true"
-  pool: cephfs.k8s-ceph-fs.replicated
+  pool: k8s-ceph-fs.replicated
 
   # The secrets contain Ceph admin credentials. These are generated automatically by the operator
   # in the same namespace as the cluster.
