--- a/apps/clabernetes/values-prod.yml
+++ b/apps/clabernetes/values-prod.yml
@@ -7,7 +7,7 @@ ui:
   enabled: true
 
   ingress:
-    enabled: false
-    # ingressClass: traefik
-    # # you really almost certainly gotta do something with this if you want the ingress to work :)
-    # host: ui.clabernetes.home.nerdylyonsden.io
+    enabled: true
+    ingressClass: traefik-prod
+    # you really almost certainly gotta do something with this if you want the ingress to work :)
+    host: ui.clabernetes.home.nerdylyonsden.io
