--- a/apps/clabernetes/values-prod.yml
+++ b/apps/clabernetes/values-prod.yml
@@ -7,7 +7,7 @@ ui:
   enabled: true
 
   ingress:
-    enabled: true
-    ingressClass: traefik-prod
+    enabled: false
+    # ingressClass: traefik-prod
     # you really almost certainly gotta do something with this if you want the ingress to work :)
-    host: ui-clabernetes.home.nerdylyonsden.io
+    # host: ui-clabernetes.home.nerdylyonsden.io
