--- a/apps/clabernetes/overlays/prod/ingress-route-ui.yml
+++ b/apps/clabernetes/overlays/prod/ingress-route-ui.yml
@@ -13,7 +13,7 @@
      - match: Host(`ui-clabernetes.home.nerdylyonsden.io`) && PathPrefix(`/`)  # <-- Replace with your FQDN
        kind: Rule
        services:
-         - name: clabernetes-ui  # <-- Replace with your service name
+         - name: clabernetes-ui-test  # <-- Replace with your service name
            port: 443
 # --> (Optional) Add certificate secret
    tls:
