--- a/apps/clabernetes/topologies/c9s-spine-leaf-border-leaf/cluster-secret-store.yml
+++ b/apps/clabernetes/topologies/c9s-spine-leaf-border-leaf/cluster-secret-store.yml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: vault-backend
+  name: vault-backend-clabernetes
   namespace: c9s-spine-leaf-borderleaf
 spec:
   provider:
