--- a/apps/clabernetes/topologies/c9s-spine-leaf-border-leaf/external-secret.yml
+++ b/apps/clabernetes/topologies/c9s-spine-leaf-border-leaf/external-secret.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   refreshInterval: 1h
   secretStoreRef:
-    name: vault-backend        # Your pre-configured Vault SecretStore name
+    name: vault-backend-clabernetes       # Your pre-configured Vault SecretStore name
     kind: ClusterSecretStore
   target:
     name: ghcr-secret    # Name of the secret to be created in Kubernetes
