--- a/apps/clabernetes/topologies/c9s-spine-leaf-border-leaf/external-secret.yml
+++ b/apps/clabernetes/topologies/c9s-spine-leaf-border-leaf/external-secret.yml
@@ -17,8 +17,8 @@ spec:
           {
             "auths": {
               "ghcr.io": {
-                "auth": "{{ .data.base64 }}",
-                "email": "{{ .data.email }}"
+                "auth": "{{ .base64 }}",
+                "email": "{{ .email }}"
               }
             }
           }
