--- a/apps/argocd/prod/repository-list.yml
+++ b/apps/argocd/prod/repository-list.yml
@@ -36,3 +36,8 @@ repositories:
     type: helm
     name: "External Secrets (Official)"
     project: "prod-home"
+
+  - url: "https://charts.jetstack.io"
+    type: helm
+    name: "Cert Manager (Official)"
+    project: "prod-home"
