--- a/apps/kube-prometheus-stack/overlays/prod/ingress-route-grafana.yml
+++ b/apps/kube-prometheus-stack/overlays/prod/ingress-route-grafana.yml
@@ -1,1 +1,21 @@
-TEST
+---
+# --> (Example) Create an IngressRoute for your service...
+ apiVersion: traefik.io/v1alpha1
+ kind: IngressRoute
+ metadata:
+   name: grafana-prod-ingressroute  # <-- Replace with your IngressRoute name
+   namespace: monitoring-prod  # <-- Replace with your namespace
+ spec:
+   entryPoints:
+     - web
+     - websecure
+   routes:
+     - match: Host(`grafana.home.nerdylyonsden.io`)  # <-- Replace with your FQDN
+       kind: Rule
+       services:
+         - name: kube-prometheus-stack-prod-grafana  # <-- Replace with your service name
+           port: 80
+# --> (Optional) Add certificate secret
+   tls:
+     secretName: prod-apps-certificate-secret # < cert-manager will store the created certificate in this secret.
+# <--
