--- a/apps/traefik/values-prod.yml
+++ b/apps/traefik/values-prod.yml
@@ -27,3 +27,7 @@ extraObjects:
     spec:
       basicAuth:
         secret: traefik-dashboard-auth-secret
+
+service:
+  spec:
+    loadBalancerIP: 192.168.101.161
