--- a/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
+++ b/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
@@ -34,12 +34,12 @@ spec:
                   CLAB_MGMT_VRF: MGMT  
             nodes:
               node-1:
-                kind: arista_ceos
+                kind: ceos
                 image: ghcr.io/leothelyon17/nautobot-avd-integration/ceos:4.32.2F
                 startup-config: configs/node1-startup-config.cfg
                 mgmt-ipv4: 192.168.101.170
               node-2:
-                kind: arista_ceos
+                kind: ceos
                 image: ghcr.io/leothelyon17/nautobot-avd-integration/ceos:4.32.2F
                 startup-config: configs/node2-startup-config.cfg
                 mgmt-ipv4: 192.168.101.171
