--- a/apps/clabernetes/topologies/c9s-load-balance-test/node-2-startup-config.yml
+++ b/apps/clabernetes/topologies/c9s-load-balance-test/node-2-startup-config.yml
@@ -27,6 +27,8 @@ data:
        ! IP address - must be set uniquely per device
        ip address 192.168.101.171/29
     !
+    ip routing
+    ip routing vrf MGMT
     ! Static default route for VRF MGMT
     ip route vrf MGMT 0.0.0.0/0 192.168.101.169
     !
