--- a/apps/clabernetes/topologies/c9s-load-balance-test/node-1-startup-config.yml
+++ b/apps/clabernetes/topologies/c9s-load-balance-test/node-1-startup-config.yml
@@ -13,14 +13,14 @@ data:
     !
     hostname dc1-spine1
     !
-    ! Configures username and password for the ansible user
+    ! 
     username ansible privilege 15 role network-admin secret 0 lab123
     !
-    ! Defines the VRF for MGMT
+    ! 
     vrf instance MGMT
     !
-    ! Defines the settings for the Management1 interface through which Ansible reaches the device
-    interface Management0 # Note the Management0 here.. not 1
+    !
+    interface Management0
        description oob_management
        no shutdown
        vrf MGMT
@@ -32,7 +32,7 @@ data:
     ! Static default route for VRF MGMT
     ip route vrf MGMT 0.0.0.0/0 192.168.101.169
     !
-    ! Enables API access in VRF MGMT
+    !
     management api http-commands
        protocol https
        no shutdown
@@ -42,5 +42,5 @@ data:
     !
     end
     !
-    ! Save configuration to flash
+    !
     copy running-config startup-config
