--- a/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
+++ b/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
@@ -8,7 +8,7 @@ spec:
     dockerConfig: ghcr-secret
   deployment:
     persistence:
-      claimSize: "5Gi"
+      claimSize: "2Gi"
       enabled: true
       storageClassName: "rook-cephfs-delete"
     filesFromConfigMap:
@@ -42,11 +42,14 @@ spec:
                 image: ghcr.io/leothelyon17/nautobot-avd-integration/ceos:4.32.2F
                 startup-config: configs/node1-startup-config.cfg
                 #mgmt-ipv4: 192.168.101.170
+              # node-2:
+              #   kind: ceos
+              #   image: ghcr.io/leothelyon17/nautobot-avd-integration/ceos:4.32.2F
+              #   startup-config: configs/node2-startup-config.cfg
+              #   #mgmt-ipv4: 192.168.101.171
               node-2:
-                kind: ceos
-                image: ghcr.io/leothelyon17/nautobot-avd-integration/ceos:4.32.2F
-                startup-config: configs/node2-startup-config.cfg
-                #mgmt-ipv4: 192.168.101.171
+                  kind: mikrotik_ros
+                  image: ghcr.io/leothelyon17/nautobot-avd-integration/mikrotik_routeros:7.17.2
               
 
             links:
