--- a/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
+++ b/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
@@ -9,19 +9,19 @@ spec:
   deployment:
     persistence:
       claimSize: "2Gi"
-      enabled: true
+      enabled: false
       storageClassName: "rook-cephfs-delete"
     filesFromConfigMap:
         node-1:
           - filePath: configs/node1-startup-config.cfg
             configMapName: spine-leaf-borderleaf-node-1-startup-config
             configMapPath: startup-config
-            mode: execute
+            mode: read
         node-2:
           - filePath: configs/node2-startup-config.cfg
             configMapName: spine-leaf-borderleaf-node-2-startup-config
             configMapPath: startup-config
-            mode: execute
+            mode: read
   naming: non-prefixed
   definition:
     containerlab: |-
