--- a/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
+++ b/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
@@ -9,7 +9,7 @@ spec:
   deployment:
     persistence:
       claimSize: "2Gi"
-      enabled: false
+      enabled: true
       storageClassName: "rook-cephfs-delete"
     filesFromConfigMap:
         node-1:
