--- a/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
+++ b/apps/clabernetes/topologies/c9s-load-balance-test/topology.yml
@@ -8,6 +8,8 @@ spec:
     dockerConfig: ghcr-secret
   deployment:
     persistence:
+      accessModes:
+        - ReadWriteMany
       claimSize: "2Gi"
       enabled: true
       storageClassName: "rook-cephfs-delete"
