--- a/apps/kube-prometheus-stack/overlays/prod/service-monitor-github-exporter.yml
+++ b/apps/kube-prometheus-stack/overlays/prod/service-monitor-github-exporter.yml
@@ -4,6 +4,7 @@ metadata:
   name: github-exporter-servicemonitor
   labels:
     release: kube-prometheus-stack
+  namespace: monitoring-prod
 spec:
   selector:
     matchLabels:
