--- a/apps/kube-prometheus-stack/overlays/prod/service-monitor-github-exporter.yml
+++ b/apps/kube-prometheus-stack/overlays/prod/service-monitor-github-exporter.yml
@@ -6,6 +6,9 @@ metadata:
     release: kube-prometheus-stack
   namespace: monitoring-prod
 spec:
+  namespaceSelector:
+    matchNames:
+    - altcoin-viability 
   selector:
     matchLabels:
       app: github-exporter
