--- a/apps/kube-prometheus-stack/overlays/prod/service-monitor-github-exporter.yml
+++ b/apps/kube-prometheus-stack/overlays/prod/service-monitor-github-exporter.yml
@@ -3,7 +3,7 @@ kind: ServiceMonitor
 metadata:
   name: github-exporter-servicemonitor
   labels:
-    release: kube-prometheus-stack
+    release: kube-prometheus-stack-prod
   namespace: monitoring-prod
 spec:
   namespaceSelector:
