--- a/.github/workflows/kubespray-cluster-reset.yml
+++ b/.github/workflows/kubespray-cluster-reset.yml
@@ -1,9 +1,9 @@
 name: Kubespray Cluster Reset
 
 on:
-  push:
-    paths:
-      - 'clusters/**'  # Monitor changes in the clusters/ directory
+  # push:
+  #   paths:
+  #     - 'clusters/**'  # Monitor changes in the clusters/ directory
   workflow_dispatch:
     inputs:
         environment:
