--- a/clusters/lab/group_vars/k8s_cluster/k8s-cluster.yml
+++ b/clusters/lab/group_vars/k8s_cluster/k8s-cluster.yml
@@ -18,7 +18,10 @@ kube_api_anonymous_auth: true
 
 ## Change this to use another Kubernetes version, e.g. a current beta release
 kube_version: 1.32.3
-kubeadm_version: 1.32.3
+
+kubeadm_enabled: true
+kubectl_enabled: true
+kubelet_enabled: true
 
 # Where the binaries will be downloaded.
 # Note: ensure that you've enough disk space (about 1G)
