--- a/apps/metallb/overlays/lab/l2-advertisement.yml
+++ b/apps/metallb/overlays/lab/l2-advertisement.yml
@@ -2,7 +2,7 @@ apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
   name: l2-ip
-  namespace: metallb-lab
+  namespace: metallb-system
 spec:
   ipAddressPools:
   - lab-traefik-pool
