--- a/apps/traefik/values-lab.yml
+++ b/apps/traefik/values-lab.yml
@@ -1,21 +1,3 @@
-# traefik-values.yml
-# ports:
-#   web:
-#     expose: true
-#     port: 80
-#     exposedPort: 80
-#     protocol: TCP
-#   websecure:
-#     expose: true
-#     port: 443
-#     exposedPort: 443
-#     protocol: TCP
-#   traefik:
-#     expose: true
-#     port: 9000
-#     exposedPort: 9000
-#     protocol: TCP
-
 ingressRoute:
   dashboard:
     enabled: true
@@ -46,18 +28,10 @@ extraObjects:
       basicAuth:
         secret: traefik-dashboard-auth-secret
 
-# providers:
-#   kubernetesCRD: {}
-#   kubernetesIngress: {}
+additionalArguments:
+  - "--api.insecure=true" # Enables the dashboard
+  - "--api.dashboard=true"
 
-# additionalArguments:
-#   - "--api.insecure=true" # Enables the dashboard
-#   - "--api.dashboard=true"
-
-# service:
-#   type: LoadBalancer
-#   loadBalancerIP: 172.16.99.30 # External IP from MetalLB
-
-# logs:
-#   general:
-#     level: INFO
+service:
+  type: LoadBalancer
+  loadBalancerIP: 172.16.99.30 # External IP from MetalLB
