--- a/clusters/prod/hosts.yml
+++ b/clusters/prod/hosts.yml
@@ -12,6 +12,10 @@ all:
       ansible_host: 192.168.101.159
       ip: 192.168.101.159
       access_ip: 192.168.101.159
+    rocky9-prod-node4-ds:
+      ansible_host: 192.168.101.167
+      ip: 192.168.101.167
+      access_ip: 192.168.101.167
       
   children:
     kube_control_plane:
@@ -25,6 +29,7 @@ all:
         rocky9-prod-node1:
         rocky9-prod-node2:
         rocky9-prod-node3:
+        rocky9-prod-node4-ds:
             
     etcd:
       hosts:
