--- a/.github/workflows/kubespray-cluster-create.yml
+++ b/.github/workflows/kubespray-cluster-create.yml
@@ -101,7 +101,7 @@ jobs:
         working-directory: ./kubespray
         run: |
           source venv/bin/activate
-          ansible-playbook -i inventory/${CHANGED_CLUSTER}/hosts.yml facts.yml \
+          ansible-playbook -i inventory/${CHANGED_CLUSTER}/hosts.yml playbooks/facts.yml \
             --become --become-user=root -e "ansible_password=${{ secrets.SSH_PASS }}" -e "ansible_become_pass=${{ secrets.SSH_PASS }}" -e "reset_confirmation=yes"
       
       # Step 8: Run Kubespray Playbook
