--- a/apps/kube-vip/values-prod.yml
+++ b/apps/kube-vip/values-prod.yml
@@ -3,7 +3,7 @@ config:
 
 # Check https://kube-vip.io/docs/installation/flags/
 env:
-  vip_interface: "eno1"
+  # vip_interface: "eno1"
   vip_arp: "true"
   lb_enable: "true"
   lb_port: "6443"
