--- a/apps/kube-vip/values-prod.yml
+++ b/apps/kube-vip/values-prod.yml
@@ -3,10 +3,18 @@ config:
 
 # Check https://kube-vip.io/docs/installation/flags/
 env:
-  # vip_interface: "eno1"
+  vip_interface: "eno1"
   vip_arp: "true"
   lb_enable: "true"
   lb_port: "6443"
   #vip_cidr: "32"
   svc_enable: "false"
   cp_enable: "true"
+
+nodeSelector:
+  node-role.kubernetes.io/control-plane: ""
+
+tolerations:
+  - key: "node-role.kubernetes.io/control-plane"
+    operator: "Exists"
+    effect: "NoSchedule"
