--- a/clusters/prod/hosts.yml
+++ b/clusters/prod/hosts.yml
@@ -16,6 +16,10 @@ all:
       ansible_host: 192.168.101.167
       ip: 192.168.101.167
       access_ip: 192.168.101.167
+    rocky9-prod-node5-un:
+      ansible_host: 192.168.104.168
+      ip: 192.168.104.168
+      access_ip: 192.168.104.168
       
   children:
     kube_control_plane:
@@ -30,6 +34,7 @@ all:
         rocky9-prod-node2:
         rocky9-prod-node3:
         rocky9-prod-node4-ds:
+        rocky9-prod-node5-un:
             
     etcd:
       hosts:
