--- a/apps/rook-ceph/overlays/prod/ceph-cluster.yml
+++ b/apps/rook-ceph/overlays/prod/ceph-cluster.yml
@@ -19,6 +19,14 @@ spec:
   #   # Only create OSDs on devices that match the regular expression filter, "sdb" in this example
   #   deviceFilter: nvme0n1p6
   storage:
+    resources:
+      limits:
+        memory: 3Gi
+      requests:
+        memory: 2Gi
+    config:
+      osd_memory_target: "3221225472"  # 3GB in bytes
+      
     useAllNodes: false
     useAllDevices: false
     nodes:
