--- a/apps/rook-ceph/overlays/prod/ceph-cluster.yml
+++ b/apps/rook-ceph/overlays/prod/ceph-cluster.yml
@@ -26,12 +26,21 @@ spec:
     useAllDevices: false
     nodes:
       - name: rocky9-prod-node1
+        resources:
+          limits:
+            memory: "3072Mi"
         devices:
           - name: "nvme0n1p6"
       - name: rocky9-prod-node2
+        resources:
+          limits:
+            memory: "3072Mi"
         devices:
           - name: "nvme0n1p6"
       - name: rocky9-prod-node3
+        resources:
+          limits:
+            memory: "3072Mi"
         devices:
           - name: "nvme0n1p6"
       - name: rocky9-prod-node4-ds
