--- a/apps/n8n/values-prod.yml
+++ b/apps/n8n/values-prod.yml
@@ -23,9 +23,9 @@ main:
 
   extraEnv:  # Minimal set to override base URLs without port conflicts
     - name: WEBHOOK_URL
-      value: "https://n8n-dev.lib-nauto-apps.lab.aheadaviation.com/"  # Sets OAuth callback and webhook base (trailing slash required)
+      value: "https://n8n.nerdy-apps-prod.jjland.local/"  # Sets OAuth callback and webhook base (trailing slash required)
     - name: N8N_EDITOR_BASE_URL
-      value: "https://n8n-dev.lib-nauto-apps.lab.aheadaviation.com/"  # Sets editor UI base
+      value: "https://n8n.nerdy-apps-prod.jjland.local/"  # Sets editor UI base
     - name: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
       value: "true"  # Auto-fixes the 0660 permissions warning
     - name: N8N_RUNNERS_ENABLED  # Optional: Addresses deprecation for future-proofing
