--- a/apps/n8n/overlays/prod/ingress-route.yml
+++ b/apps/n8n/overlays/prod/ingress-route.yml
@@ -3,16 +3,16 @@
  apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
-   name: n8n-dev-ingressroute  # <-- Replace with your IngressRoute name
-   namespace: n8n-dev  # <-- Replace with your namespace
+   name: n8n-prod-ingressroute  # <-- Replace with your IngressRoute name
+   namespace: n8n-prod  # <-- Replace with your namespace
  spec:
    entryPoints:
      - websecure
    routes:
-     - match: Host(`n8n-dev.lib-nauto-apps.lab.aheadaviation.com`)  # <-- Replace with your FQDN
+     - match: Host(`https://n8n.nerdy-apps-prod.jjland.local`)  # <-- Replace with your FQDN
        kind: Rule
        services:
-         - name: n8n-dev  # <-- Replace with your service name
+         - name: n8n-prod  # <-- Replace with your service name
            port: 80
 # --> (Optional) Add certificate secret
 # tls:
