--- a/apps/netbox/overlays/prod/external-secrets-repo.yml
+++ b/apps/netbox/overlays/prod/external-secrets-repo.yml
@@ -2,11 +2,11 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: repo-credentials-secret
-  namespace: netbox-dev
+  namespace: netbox-prod
 spec:
   refreshInterval: "1h"  # How often to sync the secret
   secretStoreRef:
-    name: vault-backend-netbox-dev
+    name: vault-backend-netbox-prod
     kind: ClusterSecretStore
   target:
     name: net-automation-k8s-repo-credentials  # Name of the Kubernetes Secret
