--- a/apps/netbox/overlays/prod/external-secrets-superuser.yml
+++ b/apps/netbox/overlays/prod/external-secrets-superuser.yml
@@ -2,33 +2,33 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: netbox-dev-superuser-secrets
-  namespace: netbox-dev
+  namespace: netbox-prod
 spec:
   refreshInterval: "1h" # Refresh every hour
   secretStoreRef:
-    name: vault-backend-netbox-dev              # Name of the SecretStore resource
+    name: vault-backend-netbox-prod              # Name of the SecretStore resource
     kind: ClusterSecretStore                # SecretStore or ClusterSecretStore
   target:
-    name: netbox-dev-superuser-secrets           # Name of the Kubernetes secret to create
+    name: netbox-prod-superuser-secrets           # Name of the Kubernetes secret to create
     creationPolicy: Owner            # Replace or update the secret
   
   data:
     - secretKey: username   # Key for Netbox Superuser name
       remoteRef:
-        key: secret/data/netbox-dev-credentials
+        key: secret/data/netbox-prod-credentials
         property: superuser-name
 
     - secretKey: password      # Key for Netbox Superuser password
       remoteRef:
-        key: secret/data/netbox-dev-credentials
+        key: secret/data/netbox-prod-credentials
         property: superuser-pass
 
     - secretKey: api_token     # Key for Netbox Superuser password
       remoteRef:
-        key: secret/data/netbox-dev-credentials
+        key: secret/data/netbox-prod-credentials
         property: superuser-api-token
 
     - secretKey: email    # Key for Netbox Superuser password
       remoteRef:
-        key: secret/data/netbox-dev-credentials
+        key: secret/data/netbox-prod-credentials
         property: superuser-email
