--- a/apps/netbox/overlays/prod/external-secrets.yml
+++ b/apps/netbox/overlays/prod/external-secrets.yml
@@ -2,29 +2,29 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: netbox-dev-secrets
-  namespace: netbox-dev
+  namespace: netbox-prod
 spec:
   refreshInterval: "1h" # Refresh every hour
   secretStoreRef:
-    name: vault-backend-netbox-dev              # Name of the SecretStore resource
+    name: vault-backend-netbox-prod              # Name of the SecretStore resource
     kind: ClusterSecretStore                # SecretStore or ClusterSecretStore
   target:
-    name: netbox-dev-secrets           # Name of the Kubernetes secret to create
+    name: netbox-prod-secrets           # Name of the Kubernetes secret to create
     creationPolicy: Owner            # Replace or update the secret
   data:
     - secretKey: postgres-password       # Key for Postgres 'postgres' user in the K8s secret
       remoteRef:
-        key: secret/data/netbox-dev-credentials    # Path in Vault (adjust based on your setup)
+        key: secret/data/netbox-prod-credentials    # Path in Vault (adjust based on your setup)
         property: postgres-pass      # Key in the Vault secret
 
     - secretKey: password   # Key for Postgres password in the K8s secret
       remoteRef:
-        key: secret/data/netbox-dev-credentials
+        key: secret/data/netbox-prod-credentials
         property: postgres-pass
 
     - secretKey: redis-password      # Key for Redis password
       remoteRef:
-        key: secret/data/netbox-dev-credentials
+        key: secret/data/netbox-prod-credentials
         property: redis-pass
 
     - secretKey: dockerusername
