--- a/apps/netbox/overlays/prod/ingress-route.yml
+++ b/apps/netbox/overlays/prod/ingress-route.yml
@@ -3,19 +3,19 @@
  apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
-   name: netbox-dev-ingressroute  # <-- Replace with your IngressRoute name
-   namespace: netbox-dev  # <-- Replace with your namespace
+   name: netbox-prod-ingressroute  # <-- Replace with your IngressRoute name
+   namespace: netbox-prod  # <-- Replace with your namespace
  spec:
    entryPoints:
      - web
      - websecure
    routes:
-     - match: Host(`netbox-dev.lib-nauto-apps.lab.aheadaviation.com`)  # <-- Replace with your FQDN
+     - match: Host(`netbox.home.nerdylyonsden.io`)  # <-- Replace with your FQDN
        kind: Rule
        services:
-         - name: netbox-dev  # <-- Replace with your service name
+         - name: netbox-prod  # <-- Replace with your service name
            port: 80
 # --> (Optional) Add certificate secret
-# tls:
-#     secretName: your-certificate-secret
+   tls:
+     secretName: prod-apps-certificate-secret # < cert-manager will store the created certificate in this secret.
 # <--
